@startuml
title Sistema de Loja de Baixos e Luthieria

'=========================
' HERANÇA
'=========================
class Pessoa {
  - id: Long
  - nome: String
  - email: String
}

class Cliente
class Luthier

Pessoa <|-- Cliente
Pessoa <|-- Luthier

'=========================
' LOJA
'=========================
abstract class Produto {
  - id: Long
  - nome: String
  - preco: Double
}

class Baixo

enum BaixoModeloBase {
    JAZZ_BASS
    PRECISION
    STINGRAY
    THUNDERBIRD
    CUSTOM
}

Baixo --> BaixoModeloBase

class Acessorio

enum AcessorioTipo {
    CORREIA
    CABO
    PALHETA
    CASE
    AFINADOR
    SUPORTE
}

Acessorio --> AcessorioTipo

Produto <|-- Baixo
Produto <|-- Acessorio

class Pedido {
  - id: Long
  - data: Date
  - valorTotal: Double
}

class ItemPedido {
  - quantidade: int
  - precoUnitario: Double
}

Cliente "1" -- "N" Pedido
Pedido "1" *-- "N" ItemPedido
ItemPedido "N" --> "1" Produto

'=========================
' FORNECEDOR (AGREGAÇÃO)
'=========================
class Fornecedor {
  - id: Long
  - nome: String
  - cnpj: String
}

Fornecedor "1" o-- "N" Produto

'=========================
' LUTHIERIA
'=========================
class BaixoCustomizado {
  - id: Long
  - modeloBase: String
  - cor: String
  - precoEstimado: Double
}

Cliente "1" -- "N" BaixoCustomizado
Luthier "1" -- "N" BaixoCustomizado

enum StatusConstrucao {
  PROJETANDO
  EM_CONSTRUCAO
  EM_TESTE
  FINALIZADO
  ENTREGUE
}

BaixoCustomizado --> StatusConstrucao

'=========================
' COMPOSIÇÃO
'=========================
class ConfiguracaoEletronica {
  - volumeKnobs: int
  - toneKnobs: int
  - circuitoAtivo: boolean
}

BaixoCustomizado "1" *-- "1" ConfiguracaoEletronica

'=========================
' CAPTADORES
'=========================
enum PosicaoCaptador {
  BRACO
  MEIO
  PONTE
}

abstract class Captador {
  - marca: String
  - preco: Double
  - posicao: PosicaoCaptador
}

class CaptadorAtivo
class CaptadorPassivo

Captador <|-- CaptadorAtivo
Captador <|-- CaptadorPassivo
Captador --> PosicaoCaptador

BaixoCustomizado "1" *-- "N" Captador

@enduml